--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-    <h1>Hello World!</h1>
-</body>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <style>
+      
+    </style>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="#">Github</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+    <section class="text-center">
+      <h1>My New Website</h1>
+      <img src="http://placekitten.com/400/400" alt="kitten" />
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    </section>
+    <section id="contact" class="text-center">
+      <h2>Contact Me</h2>
+      <form>
+        <label for="name">Name:</label>
+        <input type="text" name="name" />
+        <br />
+        <label for="email">Email:</label>
+        <input type="text" name="email" />
+        <br />
+        <button>SEND</button>
+      </form>
+    </section>
+    <footer class="text-center">
+      <p>&copy; 2021 My New Website Productions!</p>
+    </footer>
+  </body>
 </html>
